Closed Bug 1165802 Opened 9 years ago Closed 8 years ago

Media test regressions from bug 1162364

Categories

(Core :: Audio/Video: Playback, defect, P2)

defect

Tracking

()

RESOLVED FIXED

People

(Reporter: jwwang, Assigned: jwwang)

References

Details

(Keywords: regression)

Attachments

(1 file, 2 obsolete files)

We have several test case timeouts resulted from bug 1162364. They all failed on Windows 7 32-bit machines.

1. https://bugzilla.mozilla.org/show_bug.cgi?id=916399#c403
15:21:00 INFO - [1180] WARNING: NS_ENSURE_TRUE(!(alreadyDidTypeChange)) failed: file c:\builds\moz2_slave\fx-team-w32-d-0000000000000000\build\src\dom\media\fmp4\wmf\WMFVideoMFTManager.cpp, line 501

2. https://bugzilla.mozilla.org/show_bug.cgi?id=1110922#c44
18:06:04 INFO - [3316] WARNING: NS_ENSURE_TRUE(!(alreadyDidTypeChange)) failed: file c:\builds\moz2_slave\b2g-in-w32-d-00000000000000000\build\src\dom\media\fmp4\wmf\WMFVideoMFTManager.cpp, line 501

3. https://bugzilla.mozilla.org/show_bug.cgi?id=832768#c501
20:58:53 INFO - [1720] WARNING: NS_ENSURE_TRUE(!(alreadyDidTypeChange)) failed: file c:\builds\moz2_slave\m-in-w32-d-0000000000000000000\build\src\dom\media\fmp4\wmf\WMFVideoMFTManager.cpp, line 501

4. https://bugzilla.mozilla.org/show_bug.cgi?id=1125345#c5
07:46:02 INFO - [836] WARNING: NS_ENSURE_TRUE(!(alreadyDidTypeChange)) failed: file c:\builds\moz2_slave\m-in-w32-d-0000000000000000000\build\src\dom\media\fmp4\wmf\WMFVideoMFTManager.cpp, line 501

5. https://bugzilla.mozilla.org/show_bug.cgi?id=1118256#c6
11:50:50 INFO - [1604] WARNING: NS_ENSURE_TRUE(!(alreadyDidTypeChange)) failed: file c:\builds\moz2_slave\m-cen-w32-d-000000000000000000\build\src\dom\media\fmp4\wmf\WMFVideoMFTManager.cpp, line 501

6. https://bugzilla.mozilla.org/show_bug.cgi?id=845162#c395
15:00:08 INFO - [2820] WARNING: NS_ENSURE_TRUE(!(alreadyDidTypeChange)) failed: file c:\builds\moz2_slave\m-in-w32-d-0000000000000000000\build\src\dom\media\fmp4\wmf\WMFVideoMFTManager.cpp, line 501

7. https://bugzilla.mozilla.org/show_bug.cgi?id=684173#c485
22:23:57 INFO - [3700] WARNING: NS_ENSURE_TRUE(!(alreadyDidTypeChange)) failed: file c:\builds\moz2_slave\m-in-w32-d-0000000000000000000\build\src\dom\media\fmp4\wmf\WMFVideoMFTManager.cpp, line 501
Hi Karl,
The last change made to bug 1162364 is by you. Can you check this out? Thanks.
Flags: needinfo?(karlt)
Blocks: 1166017
Blocks: 1165873
Thanks JW.

I did some retriggers with aborting the loop
https://treeherder.mozilla.org/#/jobs?repo=mozilla-inbound&revision=3f28c4380901
and without (the parent revision)
https://treeherder.mozilla.org/#/jobs?repo=mozilla-inbound&revision=45b8d82f384d

and it seems to suggest that changes in bug 1162364 should be backed out.

Feel free to do that if you get to it first.
Flags: needinfo?(karlt)
Blocks: 1162364
Keywords: regression
Per comment 4, revert changes that cause recent media test timeouts.
Assignee: nobody → jwwang
Status: NEW → ASSIGNED
Attachment #8607353 - Flags: review?(karlt)
I had made this one instead:
https://hg.mozilla.org/try/rev/fa53c2ab2ecf

Still wanted to avoid the infinite loop, but allow win7 apparently issuing the value more than once
Yeah, that should work. You might want to add some comments about whey '10' is chosen instead of any other number. Feel free to take the bug and put your fix.
Comment on attachment 8607353 [details] [diff] [review]
1165802_backout_bug_1162364-v1.patch

># HG changeset patch
># Parent 74eb336844b9a0dd0044101d841334cba1fe6459
># User JW Wang <jwwang@mozilla.com>
>Bug 1165802 - revert code changes in bug 1162364 that causes media mochitests timeouts. try: -b do -p win32,win32-mulet,win64 -u none -t none

Please be specific about the revision being backed out, 3f28c4380901.

>-  nsRefPtr<CreateDXVAManagerEvent> event = 
>+  nsRefPtr<CreateDXVAManagerEvent> event =

Please remove this unrelated whitespace change.

>-      // Loop back and try decoding again...

And don't remove this line as it was not added in 3f28c4380901.

hg backout can reverse the effect of a single changeset without having to manually produce a patch.
hg update, hg revert and hg rebase can be use to prepare backout revisions for multiple consecutive changesets.
Attachment #8607353 - Flags: review?(karlt) → review+
Thanks for the review. This patch is produced by `hg backout -r 3f28c4380901`.
Attachment #8607353 - Attachment is obsolete: true
Attachment #8607404 - Flags: review+
this patch won't apply on m-c.

wmf code has moved from dom/media/fmp4/wmf to dom/media/platforms/wmf
you may want to use this one instead: https://hg.mozilla.org/try/rev/b0947080b2c3
rebase since wmf code has moved from dom/media/fmp4/wmf to dom/media/platforms/wmf.
Attachment #8607404 - Attachment is obsolete: true
Attachment #8607409 - Flags: review+
Component: Audio/Video → Audio/Video: Playback
Priority: -- → P2
This one is already fixed.
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: