Bug 1165802 - backout 3f28c4380901 in bug 1162364 that causes media mochitests timeouts. r=karlt