dom/media/platforms/wmf/WMFVideoMFTManager.cpp
@@ -482,7 +482,6 @@ WMFVideoMFTManager::Output(int64_t aStreamOffset,
   RefPtr<IMFSample> sample;
   HRESULT hr;
   aOutData = nullptr;
-  bool alreadyDidTypeChange = false;
 
   // Loop until we decode a sample, or an unexpected error that we can't
   // handle occurs.
@@ -498,9 +497,7 @@ WMFVideoMFTManager::Output(int64_t aStreamOffset,
       MOZ_ASSERT(!sample);
       hr = ConfigureVideoFrameGeometry();
       NS_ENSURE_TRUE(SUCCEEDED(hr), hr);
-      NS_ENSURE_FALSE(alreadyDidTypeChange, MF_E_TRANSFORM_STREAM_CHANGE);
       // Loop back and try decoding again...
-      alreadyDidTypeChange = true;
       continue;
     }
     if (SUCCEEDED(hr)) {
